[package]
name = "IpLookup"
version = "0.1.0"
edition = "2024"

[dependencies]
hickory-resolver = "0.25"
tokio = { version = "1", features = ["process", "macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
futures = "0.3.32"
once_cell = "1.21.3"
dashmap = "6"
reqwest = { version = "0.13", features = ["json", "gzip"] }
scraper = "0.25"
async-recursion = "1.1"